--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,3 +1,18 @@
 .place__image {
     width: 100%;
+    max-width: 460px;
+}
+
+@media screen and (max-width: 768px) {
+    .place__image {
+        max-width: 340px;
+        min-width: 340px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .place__image {
+        max-width: 320px;
+        min-width: 320px;
+    }
 }
