Шрифты перенесены в vendor, подключение в index.css

--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,6 @@
-/*normalize.css*/
 @import url(../vendor/normalize.css);
+
+@import url(../vendor/fonts.css);
 
 @import url(../blocks/link/link.css);
 
