--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,6 +1,6 @@
 .footer__link {
     display: block;
-    padding-right: 18px;
+    margin-right: 18px;
     font-size: 16px;
     line-height: 18px;
 }
@@ -11,7 +11,7 @@
 
 @media (max-width: 768px) {
     .footer__link {
-        padding-bottom: 32px;
+        margin-bottom: 32px;
         font-size: 24px;
         line-height: 24px;
     }
