--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,6 +2,11 @@
     margin: 0;
     font-size: 18px;
     line-height: 29px;
+    margin-bottom: 26px;
+}
+
+.place__paragraph:last-child {
+    margin-bottom: 0;
 }
 
 @media (max-width: 1024px) {
