--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,8 @@
 .page {
-    color: #FFFFFF;
-    min-width: 320px;
-    max-width: 1280px;
-    margin: 0 auto;
+    background-color: #2A2C2F;
+    font-family: 'Inter', Arial, sans-serif;
+    color: #FFF;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
 }
