--- a/pages/index.css
+++ b/pages/index.css
@@ -6,8 +6,7 @@
 @import url(../blocks/list/list.css);
 
 @import url(../blocks/page/page.css);
-
-@import url(../blocks/root/root.css);
+@import url(../blocks/page/__container/page__container.css);
 
 @import url(../blocks/cover/cover.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
