--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,19 +3,18 @@
     font-size: 10px;
     line-height: 14px;
     letter-spacing: 1.5px;
-    /* identical to box height, or 140% */
     text-transform: uppercase;
     align-self: start;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
     .lead__caption {
-        padding-left: 24px;
+        margin-left: 24px;
     }
 }  
 
-@media (max-width: 768px) {
+@media (max-width: 425px) {
     .lead__caption {
-        padding-left: 16px;
+        margin-left: 16px;
     }
 }
