--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding-top: 32px;
     padding-bottom: 64px;
-    font-weight: 400;
     font-size: 30px;
     line-height: 36px;
     text-align: center;
@@ -18,6 +17,11 @@
 @media (max-width: 768px) {
     .lead__subtitle {
         padding-top: 16px;
+    }
+}
+
+@media (max-width: 680px) {
+    .lead__subtitle {
         padding-bottom: 40px;
         font-size: 16px;
         line-height: 20px;
