Исправлены все замечания ревьювера

--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -8,13 +8,20 @@
 
 @media (max-width: 1024px) {
     .intro {
-        padding: 88px 48px;
-        width: auto;
+        padding: 92px 48px;
     }
 }
 
 @media (max-width: 768px) {
     .intro {
-        padding: 64px 24px;
+        padding: 88px 24px;
     }
 }
+
+
+@media (max-width: 425px) {
+    .intro {
+        padding: 64px 16px;
+    }
+}
+
