--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -16,6 +16,7 @@
     .place {
         grid-template-columns: repeat(2, minmax(min-content, max-content));
         column-gap: 28px;
+        padding-bottom: 73px;
     }
 }
 
@@ -23,5 +24,11 @@
     .place {
         grid-template-columns: minmax(min-content, max-content);
         row-gap: 32px;
+    }
+}
+
+@media (max-width: 425px) {
+    .place {
+        padding-bottom: 50px;
     }
 }
