--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,19 +1,19 @@
 .cover__subtitle {
-    margin: 0;
-    padding: 0;
-    font-size: 18px;
-    font-weight: 400;
-    line-height: 22px;
-    color: #FFF;
-    max-width: 360px;
-    text-align: center;
-    margin-top: 32px;
-    z-index: 2;
+  padding: 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  margin: 16px 0 0;
+  text-align: center;
+  max-width: 360px;
+}
+
+@media (max-width: 520px) {
+  .cover__subtitle {
+    max-width: 288px;
+    font-size: 14px;
+    line-height: 1.14;
+    margin-bottom: 33px;
   }
-  
-  @media (max-width: 520px) {
-    .cover__subtitle {
-      font-size: 14px;
-      line-height: 16px;
-    }
 }
