--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,18 +1,20 @@
 .cover__title {
-    margin: 0;
-    padding: 0;
-    font-size: 72px;
-    font-weight: 900;
-    line-height: 76px;
-    max-width: 560px;
-    text-align: center;
-  }
-  
-  @media (max-width: 520px) {
-    .cover__title {
-      font-size: 32px;
-      line-height: 35px;
-      max-width: 250px;
+  text-align: center;
+  margin: 0 0 16px;
+  padding: 0;
+  max-width: 560px;
+  font-family: "Inter", "Arial ", sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 106%;
+}
 
-    }
+@media (max-width: 520px) {
+  .cover__title {
+    max-width: 288px;
+    font-size: 32px;
+    line-height: 1.09;
+    margin: 33px 16px 0;
+  }
 }
