--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,15 +1,13 @@
 .cover {
-    max-width: 1184px;
-    /* display: flex; */
-    margin: auto;
-    background-image: url('../../images/cover-trains.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
-    opacity: 0.8;
-  }
+  margin: 0 auto 0;
+  padding: 0;
+  width: calc(100% - 2*48px);
+  display: flex;
+  flex-direction: column;
+}
 
-  .cover:hover {
-    opacity: 0.8;
+@media (max-width: 786px) {
+  .cover {
+      width: 100%;
   }
+}
