--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,18 +1,23 @@
 .footer {
     display: flex;
     justify-content: space-between;
-    padding: 99px 48px 24px;
+    padding: 91px 48px 24px;
 }
 
 @media (max-width: 1024px) {
     .footer {
-        padding: 88px 24px 24px;
+        padding: 88px 48px 24px;
     }
 }
 
 @media (max-width: 768px) {
     .footer {
-        padding: 64px auto 24px 16px;
+        padding: 64px  24px 16px;
+    }
+}
+
+@media (max-width: 425px) {
+    .footer {
         flex-direction: column;
     }
 }
