--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -5,16 +5,17 @@
     margin: 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
     .place__title {
         line-height: 42px;
         font-size: 46px;
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 425px) {
     .place__title {
         line-height: 32px;
         font-size: 35px;
+        padding: 0 16px 0;
     }
 }
