--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,21 +1,21 @@
 .places {
-    padding: 92px 148px 19px;
+    padding: 85px 148px 12px;
 }
 
 @media (max-width: 1024px) {
     .places {
-        padding: 92px 48px 0;
+        padding: 85px 48px 0;
     }
 }
 
 @media (max-width: 768px) {
     .places {
-        padding: 92px 24px 0;
+        padding: 85px 24px 0;
     }
 }
 
 @media (max-width: 425px) {
     .places {
-        padding: 92px 16px 0;
+        padding: 85px 0 0;
     }
 }
