--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,6 +2,8 @@
     font-size: 14px;
     line-height: 16px;
     margin: 0;
+    text-align: right;
+    align-self: end;
 }
 
 @media (max-width: 768px) {
