--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -14,7 +14,7 @@
 
 @media (max-width: 768px) {
     .photo-grid {
-        padding: 0 24px 12px;
+        padding: 0 24px 0;
         grid-template-columns: repeat(2, 1fr);
         gap: 16px;
     }
@@ -24,7 +24,7 @@
 
 @media (max-width: 650px) {
     .photo-grid {
-        padding: 0 16px 12px;
+        padding: 0 16px 0;
         gap: 12px;
         grid-template-columns: auto;
 
