Исправлен блок places

--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -16,7 +16,7 @@
     .place {
         grid-template-columns: repeat(2, minmax(min-content, max-content));
         column-gap: 28px;
-        padding-bottom: 73px;
+        /* padding-bottom: 73px; */
     }
 }
 
