--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -9,9 +9,10 @@
     margin-bottom: 0;
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 768px) {
     .place__paragraph {
-
+        font-size: 16px;
+        line-height: 26px;
     }
 }
 
