--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -11,3 +11,11 @@
         line-height: 14px;
     }
 }
+
+@media (max-width: 425px) {
+    .footer__copyright {
+        text-align: left;
+        align-self: start;
+        margin-top: 16px;
+    }
+}
