--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,13 +9,13 @@
 @media (max-width: 768px) {
     .footer__copyright {
         line-height: 14px;
+        text-align: left;
+        align-self: flex-start;
     }
 }
 
 @media (max-width: 425px) {
     .footer__copyright {
-        text-align: left;
-        align-self: start;
         margin-top: 16px;
     }
 }
