--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -8,6 +8,11 @@
 @media (max-width: 768px) {
     .footer {
         padding: 88px  24px 16px;
+    }
+}
+
+@media (max-width: 767px) {
+    .footer {
         flex-direction: column;
     }
 }
