--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
     margin: 0;
     font-size: 18px;
-    line-height: 29px;
+    line-height: 163%;
     margin-bottom: 26px;
 }
 
@@ -12,7 +12,6 @@
 @media (max-width: 768px) {
     .place__paragraph {
         font-size: 16px;
-        line-height: 26px;
     }
 }
 
