--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -14,13 +14,13 @@
 
 @media (max-width: 768px) {
     .place {
-        grid-template-columns: repeat(2, minmax(min-content, max-content));
+        grid-template-columns: 340px 1fr;
         column-gap: 28px;
-        /* padding-bottom: 73px; */
+        padding-bottom: 73px;
     }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 750px) {
     .place {
         grid-template-columns: minmax(min-content, max-content);
         row-gap: 32px;
