--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,18 +1,4 @@
 .place__image {
-    width: 100%;
-    max-width: 460px; 
-}
-
-@media screen and (max-width: 768px) {
-    .place__image {
-        max-width: 340px;
-        min-width: 340px;
-    }
-}
-
-@media screen and (max-width: 425px) {
-    .place__image {
-        max-width: 320px;
-        min-width: 320px;
-    }
+    max-width: 100%;
+    margin: 0 auto;
 }
